--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <h1>FORM VALIDATION</h1>
-<div class="">
+<div class="cent">
 <h2>User Details</h2>
 <div>Name:<span id="Username"></span></div><br>
 <div>Email Address:<span id="Useremail"></span></div><br>
@@ -43,7 +43,7 @@
             <small id="profile-error"></small>
         </div>
         <div class="cont1" id="submit-sec">
-        <button type="submit" onclick="preventDefault()" onchange="files()">Submit</button>
+        <button type="submit" onclick="preventDefault()">Submit</button>
         </div>
         </form>
     </div>
